add navigation to the site

--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Elsie+Swash+Caps&family=Great+Vibes&family=Kaushan+Script&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,400;1,700&family=VT323&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><img src="./logo.jpg" alt="" /></li>
-        <li><a href="#">Who Qubit?</a></li>
-        <li><a href="#">Products</a></li>
-        <li><a href="#">Solutions</a></li>
-        <li><a href="#">Customers</a></li>
-        <li><a href="#">Case studies</a></li>
-        <li><a href="#">Resoucers</a></li>
-        <li><a href="#">More</a></li>
-        <li><button>Book a demo</button></li>
-        <li><a href="#">Log in</a></li>
-      </ul>
-    </nav>
-    <header>
-      <span>Driving growth with personalization.</span>
-      <h1>Make ecommerce</h1>
-      <h1>More personal.</h1>
-      <p>
-        Hundreds of brands use Qubit CommerceAI to power the next generation of
-        product recommendations, badging and insights to build exceptional
-        customer experiences.
-      </p>
-      <div class="button1">
-        <button>Enter your email</button>
-        <button>Book a demo</button>
+    <header class="topbar">
+      <nav>
+        <ul class="nav">
+          <li class="nav-item"><img src="./images/logo.jpg" alt="logotip" /></li>
+          <li class="nav-item"><a href="#" class="nav-link">Who Qubit?</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Products</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Solutions</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Customers</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Case studies</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Resoucers</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">More</a></li>
+          <li class="nav-item"><button class="nav-link">Book a demo</button></li>
+          <li class="nav-item"><a href="#" class="nav-link">Log in</a></li>
+        </ul>
+      </nav>
+      <div class="head">
+        <span>Driving growth with personalization.</span>
+        <h1>Make ecommerce</h1>
+        <h1 id="h1">More personal.</h1>
+        <p>
+          Hundreds of brands use <strong>Qubit CommerceAI</strong>to power
+          <br />
+          the next generation of product recommendations, <br />
+          badging and insights to build exceptional customer <br />
+          experiences.
+        </p>
+        <div class="head-button">
+          <button>Enter your email</button>
+          <button>Book a demo</button>
+        </div>
       </div>
     </header>
   </body>
