--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li class="nav-item"><a href="#" class="nav-link">More</a></li>
         </ul>
         <button class="nav-button">Book a demo</button>
-        <a href="#" class="nav-linking"> Log in</a>
+        <a href="#" class="nav-linking"> Log In</a>
       </nav>
       <div class="head">
         <span>Driving growth with personalization.</span>
