added section content

--- a/index.html
+++ b/index.html
@@ -43,5 +43,46 @@
         </div>
       </div>
     </header>
+    <main>
+      <article>
+        <section class="section1">
+          <h2>Trusted by world-class brands.</h2>
+          <div class="section1-content">
+            <img
+              src="./images/Rectanglesection1-image1.jpg"
+              alt="section1-image1"
+            />
+            <img
+              src="./images/Rectanglesection1-images2.jpg"
+              alt="section1-image2"
+            />
+            <img
+              src="./images/Rectanglesection1-images3.jpg"
+              alt="section1-image3"
+            />
+            <img
+              src="./images/Rectanglesection1-images4.jpg"
+              alt="section1-image4"
+            />
+            <img
+              src="./images/Rectanglesection1-image5.jpg"
+              alt="section1-image5"
+            />
+            <img
+              src="./images/Rectanglesection1-image6.jpg"
+              alt="section1-image6"
+            />
+            <img
+              src="./images/Rectanglesection1-image7.jpg"
+              alt="section1-image7"
+            />
+            <img
+              src="./images/Rectanglesection1-image8.jpg"
+              alt="section1-image8"
+            />
+          </div>
+        </section>
+      </article>
+    </main>
   </body>
 </html>
