--- a/index.html
+++ b/index.html
@@ -81,6 +81,67 @@
               alt="section1-image8"
             />
           </div>
+          <p>Meet our customers ></p>
+        </section>
+        <section class="section2">
+          <div class="section2-content">
+            <div class="section2-content-left-side">
+              <h1>Grow 2.5x faster than</h1>
+              <h1>your competitors.</h1>
+              <div id="inside-left-side">
+                <button>Book a demo</button>
+                <p>Meet our customers ></p>
+                <span>*PwC audited methodology.</span>
+                <p>Read the report</p>
+              </div>
+            </div>
+            <div class="row section2-content-right-side">
+              <div class="col-4">
+                <h1>140%</h1>
+                <p>
+                  Qubit's top customers <br />
+                  annual growth rate.
+                </p>
+              </div>
+              <div class="col-4">
+                <h1>$20bn</h1>
+                <p>
+                  Online sales generated <br />
+                  by our customers in 2020.
+                </p>
+              </div>
+              <div class="col-4">
+                <h1>364</h1>
+                <p>
+                  Ecommerce stores are <br />
+                  growing faster with Qubit.
+                </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                <h1>9.5m</h1>
+                <p>
+                  Personalized experiences <br />
+                  delivered every hour.
+                </p>
+              </div>
+              <div class="col-4">
+                <h1>4.4m</h1>
+                <p>
+                  Shoppers influenced <br />
+                  by Qubit every day.
+                </p>
+              </div>
+              <div class="col-4">
+                <h1>$1.6bn</h1>
+                <p>
+                  Incremental revenue generated <br />
+                  by our customers in 2020.*
+                </p>
+              </div>
+            </div>
+          </div>
         </section>
       </article>
     </main>
