added images section3

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
               <button>Book a demo</button>
               <p>Meet our customers ></p>
             </div>
-            <span>*PwC audited methodology.</span>
-            <p>Read the report</p>
+            <p>*PwC audited methodology.</p>
+            <p id="p">Read the report</p>
           </div>
           <div class="row section2-content-right-side">
             <div class="col-4">
@@ -138,6 +138,47 @@
                 Incremental revenue generated <br />
                 by our customers in 2020.*
               </p>
+            </div>
+          </div>
+        </section>
+        <section class="section3">
+          <h1>Qubit CommerceAI.</h1>
+          <p>The new way to drive growth.</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-4">
+                <img
+                  src="./images/Framesection3-icon1.jpg"
+                  alt="section3-icon1"
+                />
+                <h3>More insight</h3>
+                <p>
+                  Learn which products drive performance and which don't,
+                  through automated insights you can action.
+                </p>
+              </div>
+              <div class="col-4">
+                <img
+                  src="./images/Framesection3-icon2.jpg"
+                  alt="section3-icon2"
+                />
+                <h3>More personal</h3>
+                <p>
+                  Qubit CommerceAI generates a model per shopper to make every
+                  customer interaction more relevant.
+                </p>
+              </div>
+              <div class="col-4">
+                <img
+                  src="./images/Framesection3-icon3.jpg"
+                  alt="section3-icon3"
+                />
+                <h3>More effective</h3>
+                <p>
+                  Qubit fuses data, intent, and design tools to enable your team
+                  to create more effective customer experiences.
+                </p>
+              </div>
             </div>
           </div>
         </section>
