--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     />
   </head>
   <body>
-    <header class="topbar">
-      <nav>
+      <nav class="topbar">
+        <div class="container">
         <img src="./images/logo.jpg" alt="logotip" />
         <ul class="nav">
           <li class="nav-item"><a href="#" class="nav-link">Who Qubit?</a></li>
@@ -26,6 +26,8 @@
         <button class="nav-button">Book a demo</button>
         <a href="#" class="nav-linking"> Log In</a>
       </nav>
+    </div>
+    <header>
       <div class="head">
         <span>Driving growth with personalization.</span>
         <h1>Make ecommerce</h1>
@@ -180,6 +182,21 @@
                 </p>
               </div>
             </div>
+          </div>
+        </section>
+        <section class="section4">
+          <h1>All the power. Easy to use.</h1>
+          <p>
+            By collaborating with real ecommerce teams we've built the next-gen
+            personalization tool. No code. No clunkiness.
+          </p>
+          <img
+            src="./images/Rectanglesection4-images.jpg"
+            alt="section4image"
+          />
+          <div class="section4-buttons">
+            <button class="section-1button">See products</button>
+            <button class="section-2button">Book a demo</button>
           </div>
         </section>
       </article>
