--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
             <button class="section-2button">Book a demo</button>
           </div>
         </section>
+        <section class="section5">
+         
+        </section>
       </article>
     </main>
   </body>
