creation section5 content

--- a/index.html
+++ b/index.html
@@ -200,7 +200,19 @@
           </div>
         </section>
         <section class="section5">
-         
+          <h1>What you can do with Qubit.</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-4">
+              </div>
+              <div class="col-4"></div>
+              <div class="col-4"></div>
+              <div class="col-4"></div>
+              <div class="col-4"></div>
+              <div class="col-4"></div>
+            </div>
+          </div>
+
         </section>
       </article>
     </main>
