added html file section5

--- a/index.html
+++ b/index.html
@@ -204,12 +204,35 @@
           <div class="container">
             <div class="row">
               <div class="col-4">
+                <img src="./images/Framesection5-icon1.jpg" alt="section5-icon1">
+                <h3>1:1 Product recommendations</h3>
+                <p>Use deep learning recommendations to engage customers in seconds.</p>
               </div>
-              <div class="col-4"></div>
-              <div class="col-4"></div>
-              <div class="col-4"></div>
-              <div class="col-4"></div>
-              <div class="col-4"></div>
+              <div class="col-4">
+                <img src="./images/Framesection5-icon2.jpg" alt="section5-icon2">
+                <h3>1:1 Product badging</h3>
+                <p>Guide discovery with personalized product badging. Push sales with social proofing.</p>
+              </div>
+              <div class="col-4">
+                <img src="./images/Framesection5-icon3.jpg" alt=" section5-icon3">
+                <h3>Personalized content</h3>
+                <p>Your customers are unique. Present them with content that shows you know them.</p>
+              </div>
+              <div class="col-4">
+                <img src="./images/Framesection5-icon4.jpg" alt="secton5-icon4">
+                <h3>Product insights</h3>
+                <p>A platform packed with insights helping you discover the hard hitting things you can do next.</p>
+              </div>
+              <div class="col-4">
+                <img src="./images/Framesection5-icon5.jpg" alt="section5-icon5">
+                <h3>CommerceAI</h3>
+                <p>Your customer's behavioral data is telling you a story. Use predictive and affinity based algorithms to serve them better.</p>
+              </div>
+              <div class="col-4">
+                <img src="./images/Framesection5-icon6.jpg" alt="section5-icon6">
+                <h3>Platform integrations</h3>
+                <p>Connect Qubit to any tool via API. Import data or trigger an experience on any platform.</p>
+              </div>
             </div>
           </div>
 
