--- a/index.html
+++ b/index.html
@@ -235,7 +235,38 @@
               </div>
             </div>
           </div>
-
+        </section>
+        <section class="section6">
+        <h1>Trusted by leading brands.</h1>
+        <div class="container">
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/Rectanglesection6-img1.jpg" alt="">
+          </div>
+          <div class="card-content">
+            <img src="./images/Rectanglesection6-logo1.png" alt="">
+            <p>Clinique builds relationships with millions of customers each year.</p>
+          </div>
+        </div>
+        <div class="card">
+        <div class="card-image">
+          <img src="./images/Rectanglesection6-img2.jpg" alt="">
+        </div>
+        <div class="card-content">
+          <img src="./images/Rectanglesection6-logo2.jpg" alt="">
+          <p>River Island transforms the customer experience with personalization.</p>
+        </div>
+        </div>
+        <div class="card">
+          <div class="card-image">
+            <img src="./images/Rectanglesection6-img3.jpg" alt="">
+          </div>
+          <div class="card-content">
+            <img src="./images/Rectanglesection6-logo3.jpg" alt="">
+            <p>MandM Direct drives increase in revenue with deep learning recs</p>
+          </div>
+        </div>
+        </div>
         </section>
       </article>
     </main>
