--- a/index.html
+++ b/index.html
@@ -206,32 +206,33 @@
               <div class="col-4">
                 <img src="./images/Framesection5-icon1.jpg" alt="section5-icon1">
                 <h3>1:1 Product recommendations</h3>
-                <p>Use deep learning recommendations to engage customers in seconds.</p>
+                <p>Use deep learning <br> recommendations to engage <br> customers in seconds.</p>
               </div>
               <div class="col-4">
                 <img src="./images/Framesection5-icon2.jpg" alt="section5-icon2">
                 <h3>1:1 Product badging</h3>
-                <p>Guide discovery with personalized product badging. Push sales with social proofing.</p>
+                <p>Guide discovery with <br> personalized product badging. <br> Push sales with social proofing.</p>
               </div>
               <div class="col-4">
                 <img src="./images/Framesection5-icon3.jpg" alt=" section5-icon3">
                 <h3>Personalized content</h3>
-                <p>Your customers are unique. Present them with content that shows you know them.</p>
+                <p>Your customers are <br> unique. Present them with  <br>
+                  content that shows you know them.</p>
               </div>
               <div class="col-4">
                 <img src="./images/Framesection5-icon4.jpg" alt="secton5-icon4">
                 <h3>Product insights</h3>
-                <p>A platform packed with insights helping you discover the hard hitting things you can do next.</p>
+                <p>A platform packed with <br> insights helping you discover <br> the hard hitting things you can do next.</p>
               </div>
               <div class="col-4">
                 <img src="./images/Framesection5-icon5.jpg" alt="section5-icon5">
                 <h3>CommerceAI</h3>
-                <p>Your customer's behavioral data is telling you a story. Use predictive and affinity based algorithms to serve them better.</p>
+                <p>Your customer's behavioral data <br> is telling you a story. <br> Use predictive and <br> affinity based algorithms to serve them better.</p>
               </div>
               <div class="col-4">
                 <img src="./images/Framesection5-icon6.jpg" alt="section5-icon6">
                 <h3>Platform integrations</h3>
-                <p>Connect Qubit to any tool via API. Import data or trigger an experience on any platform.</p>
+                <p>Connect Qubit to <br> any tool via API. <br> Import data or trigger <br> an experience on any platform.</p>
               </div>
             </div>
           </div>
@@ -239,13 +240,14 @@
         <section class="section6">
         <h1>Trusted by leading brands.</h1>
         <div class="container">
+          <img src="./images/Framesection6-vector1.png" alt="" class="image1">
         <div class="card">
           <div class="card-image">
             <img src="./images/Rectanglesection6-img1.jpg" alt="">
           </div>
           <div class="card-content">
             <img src="./images/Rectanglesection6-logo1.png" alt="">
-            <p>Clinique builds relationships with millions of customers each year.</p>
+            <p>Clinique builds <br> relationships with millions <br> of customers each year.</p>
           </div>
         </div>
         <div class="card">
@@ -254,7 +256,7 @@
         </div>
         <div class="card-content">
           <img src="./images/Rectanglesection6-logo2.jpg" alt="">
-          <p>River Island transforms the customer experience with personalization.</p>
+          <p>River Island transforms <br> the customer experience <br> with personalization.</p>
         </div>
         </div>
         <div class="card">
@@ -263,9 +265,10 @@
           </div>
           <div class="card-content">
             <img src="./images/Rectanglesection6-logo3.jpg" alt="">
-            <p>MandM Direct drives increase in revenue with deep learning recs</p>
+            <p>MandM Direct drives <br> increase in revenue with <br> deep learning recs</p>
           </div>
         </div>
+        <img src="./images/Framesection6-vector2.png" alt="" class="image1">
         </div>
         </section>
       </article>
