--- a/index.html
+++ b/index.html
@@ -271,6 +271,9 @@
         <img src="./images/Framesection6-vector2.png" alt="" class="image1">
         </div>
         </section>
+        <section class="section7">
+
+        </section>
       </article>
     </main>
   </body>
