creation first card section7

--- a/index.html
+++ b/index.html
@@ -272,7 +272,20 @@
         </div>
         </section>
         <section class="section7">
-
+        <h1>We specialize in your industry.</h1>
+        <p>Learn how we are delivering personalization at scale across sectors.</p>
+        <div class="container">
+          <div class="card">
+            <div class="card-content">
+              <div class="card-head">
+                <img src="./images/Rectanglesection6-logo1.png" alt="">
+                <h4>Beauty and cosmetics</h4>
+              </div>
+              <p>Discover relevant products. Push samples. Upsell and replenish.</p>
+              <span>Explore our solutions for beauty and cosmetics.</span>
+            </div>
+          </div>
+        </div>
         </section>
       </article>
     </main>
