creation second card section7

--- a/index.html
+++ b/index.html
@@ -278,14 +278,22 @@
           <div class="card">
             <div class="card-content">
               <div class="card-head">
-                <img src="./images/Rectanglesection6-logo1.png" alt="">
+                <img src="./images/Framesection7-icon1.png" alt="">
                 <h4>Beauty and cosmetics</h4>
               </div>
               <p>Discover relevant products. Push samples. Upsell and replenish.</p>
               <span>Explore our solutions for beauty and cosmetics.</span>
             </div>
           </div>
-        </div>
+          <div class="card">
+            <div class="card-head">
+              <img src="./images/Framesection7-icon2.png" alt="">
+              <h4>Fashion</h4>
+            </div>
+            <p>Supercharge merchandising. Reach your best customers.</p>
+            <span>Explore our solutions for fashion.</span>
+          </div>
+       
         </section>
       </article>
     </main>
