creation four card section7

--- a/index.html
+++ b/index.html
@@ -293,7 +293,15 @@
             <p>Supercharge merchandising. Reach your best customers.</p>
             <span>Explore our solutions for fashion.</span>
           </div>
-       
+          <div class="card">
+            <div class="card-head">
+              <img src="./images/section7-icon3.png" alt="">
+              <h4>Luxury</h4>
+            </div>
+            <p>Drive brand experience online. Look after your VIPs.</p>
+            <span>Explore our solutions for luxury.</span>
+          </div>
+        </div>
         </section>
       </article>
     </main>
