creation fiveth card section7

--- a/index.html
+++ b/index.html
@@ -301,6 +301,22 @@
             <p>Drive brand experience online. Look after your VIPs.</p>
             <span>Explore our solutions for luxury.</span>
           </div>
+          <div class="card">
+            <div class="card-head">
+              <img src="./images/Framesection7-icon4.png" alt="">
+              <h4>Airlines</h4>
+            </div>
+            <p>Increase loyalty. Boost ancillary sales. Capture every opportunity.</p>
+            <span>Explore our solutions for airlines.</span>
+          </div>
+          <div class="card">
+            <div class="card-head">
+              <img src="./images/section7-icon5.png" alt="">
+              <h4>Travel & tourism</h4>
+            </div>
+            <p>Be persuasive. Inspire travellers. Drive revenue.</p>
+            <span>Explore our solutions for travel and tourism.</span>
+          </div>
         </div>
         </section>
       </article>
