creation sixth card section7

--- a/index.html
+++ b/index.html
@@ -317,6 +317,14 @@
             <p>Be persuasive. Inspire travellers. Drive revenue.</p>
             <span>Explore our solutions for travel and tourism.</span>
           </div>
+          <div class="card">
+            <div class="card-head">
+              <img src="./images/Framesection7-icon6.png" alt="">
+              <h4>Online betting</h4>
+            </div>
+            <p>Bring events to life. Personalize in real time. Be responsible.</p>
+            <span>Explore our solutions for online betting.</span>
+          </div>
         </div>
         </section>
       </article>
