--- a/index.html
+++ b/index.html
@@ -295,6 +295,9 @@
           </div>
         </div>
       </section>
+      <section class="section8">
+
+      </section>
     </article>
   </main>
 </body>
