creation section 8content

--- a/index.html
+++ b/index.html
@@ -296,7 +296,13 @@
         </div>
       </section>
       <section class="section8">
-
+        <div class="section8-content">
+          <h1>A connected ecosystem.</h1>
+          <p>The Qubit personalization platform is designed with enterprise and high-growth businesses in mind.</p>
+          <p>Our open ecosystem approach means you can connect any data source and deliver personalization across any
+            channel.</p>
+        </div>
+        <img src="./images/Rectanglesection8 -image.png" alt="">
       </section>
     </article>
   </main>
