--- a/index.html
+++ b/index.html
@@ -299,8 +299,9 @@
         <div class="section8-content">
           <h1>A connected ecosystem.</h1>
           <p>The Qubit personalization platform is designed with enterprise and high-growth businesses in mind.</p>
-          <p>Our open ecosystem approach means you can connect any data source and deliver personalization across any
+          <p>Our open ecosystem approach means you can connect any data source and deliver personalization <br> across any
             channel.</p>
+            <button>See our integrations</button>
         </div>
         <img src="./images/Rectanglesection8 -image.png" alt="">
       </section>
