added section9 content

--- a/index.html
+++ b/index.html
@@ -307,6 +307,10 @@
       </section>
       <section class="section9">
       <h1>Book a demo today.</h1>
+      <div class="section9-button">
+        <button id="section9-button-left">Enter your email</button>
+        <button id="section9-button-right">Book a demo</button>
+      </div>
       </section>
     </article>
   </main>
