--- a/index.html
+++ b/index.html
@@ -312,6 +312,17 @@
         <button id="section9-button-right">Book a demo</button>
       </div>
       </section>
+      <section class="section10">
+      <img src="./images/Rectanglesection10-image.jpg" alt="">
+      <p>Connect with us</p>
+      <div class="section10-icons">
+        <img src="./images/Vectorsection10-icon1.png" alt="">
+        <img src="./images/Vectorsection10-icon2.png" alt="">
+        <img src="./images/Framesection10-icon3.png" alt="">
+        <img src="./images/Framesection10-icon4.png" alt="">
+        <img src="./images/Framesection10-icon5 (1).png" alt="">
+      </div>
+      </section>
     </article>
   </main>
 </body>
