--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       </div>
       </section>
       <section class="section10">
-      <img src="./images/Rectanglesection10-image.jpg" alt="">
+      <img src="./images/Rectanglesection10-image.jpg" alt="" class="img1">
       <p>Connect with us</p>
       <div class="section10-icons">
         <img src="./images/Vectorsection10-icon1.png" alt="">
