added footer content

--- a/index.html
+++ b/index.html
@@ -299,34 +299,96 @@
         <div class="section8-content">
           <h1>A connected ecosystem.</h1>
           <p>The Qubit personalization platform is designed with enterprise and high-growth businesses in mind.</p>
-          <p>Our open ecosystem approach means you can connect any data source and deliver personalization <br> across any
+          <p>Our open ecosystem approach means you can connect any data source and deliver personalization <br> across
+            any
             channel.</p>
-            <button>See our integrations</button>
+          <button>See our integrations</button>
         </div>
         <img src="./images/Rectanglesection8 -image.png" alt="">
       </section>
       <section class="section9">
-      <h1>Book a demo today.</h1>
-      <div class="section9-button">
-        <button id="section9-button-left">Enter your email</button>
-        <button id="section9-button-right">Book a demo</button>
-      </div>
+        <h1>Book a demo today.</h1>
+        <div class="section9-button">
+          <button id="section9-button-left">Enter your email</button>
+          <button id="section9-button-right">Book a demo</button>
+        </div>
       </section>
       <section class="section10">
-      <img src="./images/Rectanglesection10-image.jpg" alt="" class="img1">
-      <p>Connect with us</p>
-      <div class="section10-icons">
-        <img src="./images/Vectorsection10-icon1.png" alt="">
-        <img src="./images/Vectorsection10-icon2.png" alt="">
-        <img src="./images/Framesection10-icon3.png" alt="">
-        <img src="./images/Framesection10-icon4.png" alt="">
-        <img src="./images/Framesection10-icon5 (1).png" alt="">
-      </div>
+        <img src="./images/Rectanglesection10-image.jpg" alt="" class="img1">
+        <p>Connect with us</p>
+        <div class="section10-icons">
+          <img src="./images/Vectorsection10-icon1.png" alt="">
+          <img src="./images/Vectorsection10-icon2.png" alt="">
+          <img src="./images/Framesection10-icon3.png" alt="">
+          <img src="./images/Framesection10-icon4.png" alt="">
+          <img src="./images/Framesection10-icon5 (1).png" alt="">
+        </div>
       </section>
     </article>
   </main>
   <footer>
-    
+    <div class="container">
+      <div class="content">
+        <div class="footer-content featured">
+          <h3>Featured Capabilities</h3>
+          <ul class="featured1">
+            <li><a href="#">A/B testing</a></li>
+            <li><a href="#">Abandonment recovery</a></li>
+            <li><a href="#">Customer insights</a></li>
+            <li><a href="#">Customer polling and feedback</a></li>
+            <li><a href="#">Customer segmentation</a></li>
+            <li><a href="#">Data collection</a></li>
+            <li><a href="#">Ecommerce merchandising</a></li>
+          </ul>
+          <ul>
+            <li><a href="#">Custom machine learning</a></li>
+            <li><a href="#">Journey Personalization</a></li>
+            <li><a href="#">Mobile app personalization</a></li>
+            <li><a href="#">Cross-channel personalization</a></li>
+            <li><a href="#">Social proofing</a></li>
+            <li><a href="#">Website personalization</a></li>
+          </ul>
+        </div>
+        <div class="footer-content products">
+          <h3>Products</h3>
+          <ul>
+            <li><a href="#">1:1 Product recommendations</a></li>
+            <li><a href="#">1:1 Product badging</a></li>
+            <li><a href="#">1:1 Journey personalization</a></li>
+            <li><a href="#">Personalized content</a></li>
+            <li><a href="#">Product insights</a></li>
+          </ul>
+        </div>
+        <div class="footer-content resources">
+          <h3>Resources</h3>
+          <ul>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Qubit Blog.</a></li>
+            <li><a href="#">Glossary</a></li>
+          </ul>
+        </div>
+        <div class="footer-content company">
+          <h3>Company</h3>
+          <ul>
+            <li><a href="#">Why Qubit?</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="footer-content working">
+          <h3>Working with us</h3>
+          <ul>
+            <li><a href="#">Legal</a></li>
+          </ul>
+        </div>
+      </div>
+      <img src="./images/Framefooter-icon.png" alt="">
+      <img src="./images/logo.jpg" alt="">
+      <span>© 2021 Qubit. All rights reserved.</span>
+    </div>
   </footer>
 </body>
 
