--- a/index.html
+++ b/index.html
@@ -331,7 +331,8 @@
       <div class="content">
         <div class="footer-content featured">
           <h3>Featured Capabilities</h3>
-          <ul class="featured1">
+          <div class="featured1">
+          <ul>
             <li><a href="#">A/B testing</a></li>
             <li><a href="#">Abandonment recovery</a></li>
             <li><a href="#">Customer insights</a></li>
@@ -340,7 +341,7 @@
             <li><a href="#">Data collection</a></li>
             <li><a href="#">Ecommerce merchandising</a></li>
           </ul>
-          <ul>
+        <ul>
             <li><a href="#">Custom machine learning</a></li>
             <li><a href="#">Journey Personalization</a></li>
             <li><a href="#">Mobile app personalization</a></li>
@@ -348,6 +349,7 @@
             <li><a href="#">Social proofing</a></li>
             <li><a href="#">Website personalization</a></li>
           </ul>
+        </div>
         </div>
         <div class="footer-content products">
           <h3>Products</h3>
@@ -385,10 +387,14 @@
           </ul>
         </div>
       </div>
+      <div class="footer-from-below">
       <img src="./images/Framefooter-icon.png" alt="">
+      <div class="footer-logo">
       <img src="./images/logo.jpg" alt="">
       <span>© 2021 Qubit. All rights reserved.</span>
     </div>
+    </div>
+  </div>
   </footer>
 </body>
 
