adding container to a section and changing

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   <main>
     <article>
       <section class="section1">
+        <div class="container">
         <h2>Trusted by world-class brands.</h2>
         <div class="section1-content">
           <img src="./images/Rectanglesection1-image1.jpg" alt="section1-image1" />
@@ -61,6 +62,7 @@
           <img src="./images/Rectanglesection1-image8.jpg" alt="section1-image8" />
         </div>
         <p>Meet our customers ></p>
+      </div>
       </section>
       <section class="section2">
         <div class="section2-content-left-side">
@@ -96,7 +98,7 @@
             </p>
           </div>
         </div>
-        <div class="row">
+        <div class="row section2-content-right-side-two">
           <div class="col-4">
             <h1>9.5m</h1>
             <p>
@@ -153,6 +155,7 @@
         </div>
       </section>
       <section class="section4">
+        <div class="container">
         <h1>All the power. Easy to use.</h1>
         <p>
           By collaborating with real ecommerce teams we've built the next-gen
@@ -163,6 +166,7 @@
           <button class="section-1button">See products</button>
           <button class="section-2button">Book a demo</button>
         </div>
+      </div>
       </section>
       <section class="section5">
         <h1>What you can do with Qubit.</h1>
@@ -206,8 +210,9 @@
         </div>
       </section>
       <section class="section6">
-        <h1>Trusted by leading brands.</h1>
         <div class="container">
+        <h1>Trusted by leading brands.</h1>
+        <div class="content">
           <img src="./images/Framesection6-vector1.png" alt="" class="image1">
           <div class="card">
             <div class="card-image">
@@ -238,6 +243,7 @@
           </div>
           <img src="./images/Framesection6-vector2.png" alt="" class="image1">
         </div>
+      </div>
       </section>
       <section class="section7">
         <h1>We specialize in your industry.</h1>
